[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Level/SpriteSpawner.gd" type="Script" id=1]
[ext_resource path="res://assets/forest/tree-1.png" type="Texture" id=2]
[ext_resource path="res://assets/forest/tree-2.png" type="Texture" id=3]

[node name="SpriteSpawner" type="Position2D"]
script = ExtResource( 1 )
__meta__ = {
"_gizmo_extents_": 32.0
}
textures = [ ExtResource( 2 ), ExtResource( 3 ) ]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="FloorCheck" type="RayCast2D" parent="."]
enabled = true
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
